# apps/api/internal/api/gen/oas_validators_gen.go
@@ -3159,6 +3159,24 @@ func (s *Site) Validate() error {
 			Error: err,
 		})
 	}
+	if err := func() error {
+		if value, ok := s.LastBackupStatus.Get(); ok {
+			if err := func() error {
+				if err := value.Validate(); err != nil {
+					return err
+				}
+				return nil
+			}(); err != nil {
+				return err
+			}
+		}
+		return nil
+	}(); err != nil {
+		failures = append(failures, validate.FieldError{
+			Name:  "last_backup_status",
+			Error: err,
+		})
+	}
 	if len(failures) > 0 {
 		return &validate.Error{Fields: failures}
 	}
@@ -3720,6 +3738,19 @@ func (s SiteHealthStatus) Validate() error {
 	case "healthy":
 		return nil
 	case "unreachable":
+		return nil
+	default:
+		return errors.Errorf("invalid value: %v", s)
+	}
+}
+
+func (s SiteLastBackupStatus) Validate() error {
+	switch s {
+	case "success":
+		return nil
+	case "running":
+		return nil
+	case "failed":
 		return nil
 	default:
 		return errors.Errorf("invalid value: %v", s)
